Fix heading rendering on mobile

--- a/style.css
+++ b/style.css
@@ -68,17 +68,6 @@ header h1 {
     margin: 0;
 }
 
-@media (max-width: 500px) {
-    .links {
-        display: block;
-        position: relative;
-        display: flex;
-        justify-content: space-between;
-        margin-top: var(--article-margin);
-        top: initial;
-        right: initial;
-    }
-}
 
 h2 {
     font-size: 2rem;
@@ -90,6 +79,22 @@ h3 {
 
 h4 {
     font-size: 1.3rem;
+}
+
+@media (max-width: 500px) {
+    .links {
+        display: block;
+        position: relative;
+        display: flex;
+        justify-content: space-between;
+        margin-top: var(--article-margin);
+        top: initial;
+        right: initial;
+    }
+
+    h2 {
+        font-size: 7vw;
+    }
 }
 
 em {
